# timetracker

./: Cargo.toml  README.md  exe.manifest  optional-deps  rust-toolchain  todo.txt
.cargo/: config.toml
src/: main.rs  system_tray.rs
timetracker/: README.md
timetracker/tests/: README.md
timetracker/tests/timetracker-fullgui/src/: main.rs
timetracker/tests/timetracker-gui/src/: main.rs
timetracker/tests/timetracker-mingui/src/: main.rs
timetracker/tests/timetracker-sv/: Cargo.toml
timetracker/tests/timetracker-sv/.cargo/: config.toml
timetracker/timetracker/: Cargo.toml  README.md  build.rs  manifest.rc  timetracker-manifest.rc  timetracker.exe.manifest  todo.txt
timetracker/timetracker-fullgui/: Cargo.toml
timetracker/timetracker-gui/: Cargo.toml  optional-deps
timetracker/timetracker-mingui/: Cargo.toml
timetracker/timetracker-sv/: Cargo.toml
timetracker/timetracker-sv/src/: main.rs
timetracker/timetracker/.cargo/: config.toml
timetracker/timetracker/src/: basic_app.rs  constants.rs  main.rs  shared.rs  system_tray.rs
timetracker/timetracker/wix/: main.wxs
wix/: main.wxs
