[package]
name = "timetracker"
version = "0.0.1"
edition = "2021"
authors = ["jqntn <jqntn@outlook.fr>"]
build = "build.rs"

[profile.release]
lto = true
strip = true
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"

[lints.rust]
# Allowing unsafe code for winapi calls.
# unsafe_code = "forbid"

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
single-instance = "0.3.3"
self_update = "0.39.0"
auto-launch = "0.5.0"
winapi = "0.3.9"
winreg = "0.52.0"

[build-dependencies]
winapi = { version = "0.3.9", features = ["wincontypes"] }
winres = "0.1.12"
