[package]
name = "timetracker-win"
version = "0.0.1"
edition = "2021"
build = "build.rs"
authors = ["jqntn <jqntn@outlook.fr>"]
description = "eight"
license = "MIT"

[profile.release]
lto = true
strip = true
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"

[lints.rust]
# Allowing unsafe code for winapi calls.
# unsafe_code = "forbid"

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
single-instance = "0.3.3"
auto-launch = "0.5.0"
winapi = "0.3.9"
winreg = "0.52.0"
self_update = { version = "0.39.0", features = [
    "archive-zip",
    "compression-zip-deflate",
] }

[build-dependencies]
winapi = { version = "0.3.9", features = ["wincontypes"] }
winres = "0.1.12"
