[package]
name = "timetracker-gui"
version = "0.1.0"
edition = "2021"
authors = ["jqntn <jqntn@outlook.fr>"]

[profile.release]
lto = true
strip = true
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"

[lints.rust]
unsafe_code = "forbid"

[dependencies]
iced = { version = "0.10", features = ["canvas"] }
