[package]
name = "timetracker"
version = "0.1.0"
edition = "2021"
authors = ["jqntn <jqntn@outlook.fr>"]

[profile.release]
lto = true
strip = true
incremental = false
codegen-units = 1
opt-level = "z"
panic = "abort"

[lints.rust]
# unsafe_code = "forbid"

[dependencies]
native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"
winapi = "0.3.9"
